<resources>
    <string name="app_name">gameTimeProj</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="gametime">Gametime</string>
    <string name="tap_in">Tap in!</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="new_here_create_a_profille">    New Here? Create a Profille</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="todo">todo</string>
    <string name="login_gametime_logo"> logo</string>
    <string name="create_a_profile">Create a Profile</string>
    <string name="fullname">FullName</string>
    <string name="age">Age</string>
    <string name="exisiting_user_login_here">Exisiting User? Login Here</string>
    <string name="create_a_profiles">create a profile</string>
    <string name="passwords">Password</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="hello_blank_fragment">blank</string>
    <string name="picture1">picture1</string>
    <string name="picture2">picture2</string>
    <string name="picture3">picture3</string>
    <string name="picture4">picture4</string>
    <string name="baseball">baseball</string>
    <string name="basketball">basketball</string>
    <string name="football">football</string>
    <string name="soccer">soccer</string>
    <string name="finish_your_profile">finish your profile</string>
    <string name="select_your_sports">Select your Sports!</string>
    <string name="create_event">create_event_button</string>
    <string name="select_date">select date</string>
    <string name="event_name">Event Name</string>
    <string name="username">Username...</string>
    <string name="ages">Age...</string>
    <string name="city">City...</string>
    <string name="save_profile">Save Profile</string>
</resources>