<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SportSelection">

    <ImageView
        android:id="@+id/baseballimg"
        android:layout_width="208dp"
        android:layout_height="130dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/picture1"
        app:layout_constraintEnd_toStartOf="@+id/basketballimg"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseball" />

    <Button
        android:id="@+id/baseballbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baseball"
        app:layout_constraintBottom_toTopOf="@+id/footballimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseballimg"
        app:layout_constraintVertical_bias="0.281" />

    <TextView
        android:id="@+id/TitleSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/select_your_sports"
        android:textColor="#090909"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/basketballimg"
        android:layout_width="172dp"
        android:layout_height="131dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/picture2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/basketball" />

    <Button
        android:id="@+id/basketballbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/basketball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toEndOf="@+id/baseballbut"
        app:layout_constraintTop_toBottomOf="@+id/basketballimg" />

    <ImageView
        android:id="@+id/footballimg"
        android:layout_width="206dp"
        android:layout_height="171dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/picture3"
        app:layout_constraintBottom_toTopOf="@+id/footballbut"
        app:layout_constraintEnd_toStartOf="@+id/soccerimg"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/football" />

    <ImageView
        android:id="@+id/soccerimg"
        android:layout_width="207dp"
        android:layout_height="173dp"
        android:contentDescription="@string/picture4"
        app:layout_constraintBottom_toTopOf="@+id/soccerbut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basketballbut"
        app:layout_constraintVertical_bias="0.621"
        app:srcCompat="@drawable/soccer" />

    <Button
        android:id="@+id/footballbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="128dp"
        android:text="@string/football"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/soccerbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/soccer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Finishbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_your_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />
</androidx.constraintlayout.widget.ConstraintLayout>