<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/court_background"
    android:visibility="visible"
    tools:context=".Register">

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/login_logo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#0E0E0E"
        android:textColorHint="#090909"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@+id/login_logo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="304dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#FB0000"
        android:textColorHint="#323030"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintVertical_bias="0.176" />

    <Button
        android:id="@+id/Login_button"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/login_logo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="16dp"

        android:layout_marginBottom="228dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textColor="#F4F1F1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/Loginlinks"
        android:layout_width="387dp"
        android:layout_height="43dp"
        android:layout_below="@+id/login_logo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="96dp"
        android:text="@string/new_here_create_a_profille"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoogleLog"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/GoogleLog"
        android:layout_width="110dp"
        android:layout_height="74dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="634dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:contentDescription="todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Textonly"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/google" />

    <TextView
        android:id="@+id/Textonly"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="545dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:text="@string/login_with_google"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_button" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:contentDescription="login_gametime_logo"
        app:srcCompat="@drawable/gametime_logo"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="30dp" />

</RelativeLayout>