<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    android:background="@drawable/account_creation">


    <EditText
        android:id="@+id/setup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Username..."
        android:inputType="textMultiLine"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="-1dp"
        android:background="@drawable/input"
        android:padding="10dp"
    />

    <EditText
        android:id="@+id/setup_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Age..."
        android:inputType="number"
        android:layout_alignParentLeft="true"
        android:background="@drawable/input"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/setup_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_age"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="City... "
        android:inputType="textPersonName"
        android:padding="10dp" />

    <Button
        android:id="@+id/setup_create_pofile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setup_city"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="134dp"
        android:text="Save Profile"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/basbeall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="248dp"
        android:layout_marginRight="248dp"
        android:layout_marginBottom="275dp"
        android:text="@string/baseball" />

    <Button
        android:id="@+id/basketball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="197dp"
        android:layout_marginLeft="197dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="273dp"
        android:text="@string/basketball" />

    <Button
        android:id="@+id/football"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="199dp"
        android:layout_marginLeft="199dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="218dp"
        android:text="@string/football" />

    <Button
        android:id="@+id/soccer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="251dp"
        android:layout_marginRight="251dp"
        android:layout_marginBottom="221dp"
        android:text="@string/soccer" />

</RelativeLayout>